--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mysql2": "^1.5.3",
     "redis": "^2.8.0",
     "sequelize": "^4.38.0",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "xml2json": "^0.11.2"
   }
 }
