--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "axios": "^0.18.0",
     "js-cookie": "^2.2.0",
-    "json2xml": "^0.1.3",
     "koa": "^2.5.0",
     "koa-bodyparser": "^4.2.0",
     "koa-convert": "^1.2.0",
@@ -29,6 +28,7 @@
     "redis": "^2.8.0",
     "sequelize": "^4.38.0",
     "uuid": "^3.3.2",
+    "wx-xml": "0.0.2",
     "xml2json": "^0.11.2"
   }
 }
