--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "redis": "^2.8.0",
     "sequelize": "^4.38.0",
     "uuid": "^3.3.2",
-    "wx-xml": "0.0.2",
-    "xml2json": "^0.11.2"
+    "wx-xml": "0.0.2"
   }
 }
