--- a/package.json
+++ b/package.json
@@ -29,5 +29,30 @@
     "sequelize": "^4.38.0",
     "uuid": "^3.3.2",
     "wx-xml": "0.0.2"
+  },
+  "devDependencies": {
+    "@websanova/vue-auth": "^2.21.14-beta",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-vue-app": "^2.0.0",
+    "css-loader": "^0.28.11",
+    "element-ui": "^2.3.6",
+    "file-loader": "^1.1.11",
+    "holderjs": "^2.9.4",
+    "node-sass": "^4.9.2",
+    "qrcode": "^1.2.0",
+    "sass-loader": "^7.0.1",
+    "style-loader": "^0.21.0",
+    "url-loader": "^1.0.1",
+    "vue": "^2.5.16",
+    "vue-axios": "^2.1.3",
+    "vue-loader": "^15.0.2",
+    "vue-router": "^3.0.1",
+    "vue-style-loader": "^4.1.0",
+    "vue-template-compiler": "^2.5.16",
+    "webpack": "^4.6.0",
+    "webpack-cli": "^2.1.5",
+    "webpack-dev-server": "^3.1.3"
   }
 }
