--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "js-cookie": "^2.2.0",
+    "jsonwebtoken": "^8.3.0",
     "koa": "^2.5.0",
     "koa-bodyparser": "^4.2.0",
     "koa-convert": "^1.2.0",
@@ -24,6 +25,7 @@
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
     "mongoose": "^5.2.7",
+    "ms": "^2.1.1",
     "mysql2": "^1.5.3",
     "redis": "^2.8.0",
     "sequelize": "^4.38.0",
