Fixed log logic

--- a/package.json
+++ b/package.json
@@ -39,9 +39,9 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-vue-app": "^2.0.0",
     "css-loader": "^0.28.11",
-    "element-ui": "^2.3.6",
     "file-loader": "^1.1.11",
     "holderjs": "^2.9.4",
+    "mint-ui": "^2.2.13",
     "node-sass": "^4.9.2",
     "qrcode": "^1.2.0",
     "sass-loader": "^7.0.1",
