--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "css-loader": "^0.28.11",
     "file-loader": "^1.1.11",
     "holderjs": "^2.9.4",
+    "jquery": "^3.3.1",
     "mint-ui": "^2.2.13",
     "node-sass": "^4.9.2",
     "qrcode": "^1.2.0",
