--- a/.babelrc
+++ b/.babelrc
@@ -2,5 +2,11 @@
 	"presets": [
 		"env",
 		"vue-app"
-	]
+	],
+	"plugins": [[
+			"component", [{
+			"libraryName": "mint-ui",
+			"style": true
+		}]
+	]]
 }
