--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mongoose": "^5.2.7",
     "ms": "^2.1.1",
     "mysql2": "^1.5.3",
+    "qiniu": "^7.2.1",
     "redis": "^2.8.0",
     "sequelize": "^4.38.0",
     "uuid": "^3.3.2",
