--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,17 @@
 version: "3"
 services:
+  ngnix:
+    container_name: nginx-80
+    image: nginx
+    volumes:
+      - ./default.conf:/etc/nginx/conf.d/default.conf
+    ports:
+      - "80:80"
+    expose:
+      - "80"
+    depends_on:
+      - autumn-farm-wx
+
   mongodb:
     container_name: mongo
     image: mongo
@@ -14,7 +26,5 @@ services:
       context: .
       args:
         port: 3000
-    ports:
-      - 80:3000
     depends_on:
       - mongodb
